--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,15 @@ name = "albatross-explorer"
 version = "0.1.0"
 authors = ["Janosch Gräf <janosch@nimiq.com>"]
 edition = "2018"
+description = "https://github.com/jgraef/albatross-explorer"
+homepage = "https://github.com/jgraef/albatross-explorer"
+repository = "https://github.com/jgraef/albatross-explorer"
+license = "Apache-2.0"
+categories = ["cryptography::cryptocurrencies"]
+keywords = ["nimiq", "cryptocurrency", "blockchain"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[badges]
+maintenance = { status = "experimental" }
 
 [dependencies]
 nimiq-lib = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
@@ -20,6 +27,8 @@ nimiq-network = { git = "https://github.com/nimiq/core-rs.git", branch = "janosc
 nimiq-bls = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
 nimiq-transaction = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
 nimiq-keys = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
+nimiq-account = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
+nimiq-validator = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
 beserial = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
 tokio = "0.1"
 futures = "0.1"
@@ -27,13 +36,13 @@ log = "0.4"
 fern = { version = "0.5", features = ["colored"] }
 lazy_static = "1.4"
 rocket = "0.4"
+rocket_contrib = { version = "0.4", default-features = false, features = ["handlebars_templates", "serve"] }
 serde = { version = "1.0", features = ["derive"] }
 failure = "0.1"
 hex = "0.4"
 chrono = "0.4"
 simple_logger = "1.3"
-
-[dependencies.rocket_contrib]
-version = "0.4.2"
-default-features = false
-features = ["handlebars_templates", "serve"]
+diesel = { version = "1.0", features = ["postgres"] }
+dotenv = "0.15"
+rand = "0.4"
+rand04_compat = "0.1"
